--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,15 @@ aiofiles==0.4.0
 aiohttp==3.5.4
 aionmap==0.0.2
 beautifulsoup4==4.7.1
-bs4==0.0.1
+lxml
 fake-useragent==0.1.11
 selenium==3.141.0
 python-nmap
+asyncpg
+aps-scheduler
+webargs
+flask
+marshmallow
+flask-restful
+flask-marshmallow
+flask-sqlalchemy
